# crewai_multi_agent_setup

./: .gitattributes  README.md  project_structure.txt  project_tree.txt  pyproject.toml
db/: chroma.sqlite3
output/: report.md
src/agent_demo/: crew.py  main.py
src/agent_demo/config/: agents.yaml  tasks.yaml
